<resources>
    <string name="app_name">Malgorzata_Sliwinska_czw_9_30</string>
    <string name="equals">=</string>
    <string name="clear">C</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="decimal">.</string>
    <string name="sqrt">√</string>
    <string name="percent">%</string>
</resources>