<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:id="@+id/calculatorDisplay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="4"
                android:gravity="bottom|end"
                android:rotation="0"
                android:rotationX="0"
                android:rotationY="0"
                android:text="0"
                android:textSize="60sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="1"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="2"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="3"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/buttonPlus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="4"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="5"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="6"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/buttonMinus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/subtract"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="7"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="8"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="9"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/buttonMul"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/multiply"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonC"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/clear"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/buttonDecimal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/decimal"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/buttonDiv"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/divide"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonEquals"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:text="@string/equals"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/buttonPerc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/percent"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/buttonSqrt"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sqrt"
                android:textColor="#A712C1"
                android:textSize="30sp"
                app:backgroundTint="@color/white" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>